--- a/index.html
+++ b/index.html
@@ -12,6 +12,47 @@
     <title>Home</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <img src="https://i.postimg.cc/90R6QWDL/Screenshot-2023-10-20-102505.png" alt="logo" class="img-fluid" >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/product.html">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/admin.html">Admin</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/checkout.html">Checkout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/contact.html">Contacts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <main class="container-fluid">
+        <div class="row">
+            <h1 class="te">
+        <span>Welcome to </span>
+        <span>my e-commerce</span>
+    </h1>
+    </div>
+
+
+      </main>
+      <footer class="container-fluid">E-commerce&copy; <p id="footEdit"></p></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
      <script src="./script/Product.js"></script>
